fix z-index issue

--- a/example-vault/pixel-banner-example/.obsidian/plugins/pixel-banner/styles.css
+++ b/example-vault/pixel-banner-example/.obsidian/plugins/pixel-banner/styles.css
@@ -24,6 +24,9 @@
 	transform: translateZ(0);
 	background-repeat: no-repeat;
 }
+.pixel-banner-image ~ div {
+    z-index: 1;
+}
 
 
 /* fix overflow issue with embedded notes */
